@@ -22,8 +22,8 @@ ob_implicit_flush();
 <?php
 $phpver = PHP_VERSION;
 
-echo "<p>You are using DOMjudge version " . DOMJUDGE_VERSION . "<br />\n" .
-"PHP version " . $phpver;
+echo "<p>You are using DOMjudge version " . htmlspecialchars(DOMJUDGE_VERSION) . "<br />\n" .
+"PHP version " . htmlspecialchars($phpver);
 
 // are we using the right php version?
 if($phpver{0} < 4 || ($phpver{0} == 4 && $phpver{2} == 0 ) ) {
@@ -89,6 +89,27 @@ while($cdata = $res->next()) {
 	echo "</p>\n\n";
 }
 
+
+echo "<h2>Problems</h2>\n\n<p>Checking problems...<br />\n";
+
+$res = $DB->q('SELECT probid,testdata FROM problem ORDER BY probid');
+if($res->count() > 0) {
+	while($row = $res->next()) {
+		$files = array();
+		$files[0] = INPUT_ROOT . '/' . $row['testdata'] . '/' . 'testdata.in';
+		$files[1] = INPUT_ROOT . '/' . $row['testdata'] . '/' . 'testdata.out';
+		for ( $i = 0; $i < 2; ++$i ) {
+			if ( ! file_exists( $files[$i] ) ) {
+				err('Non-existent testdata file for problem ' . $row['probid'] .
+					': ' . $files[$i] );
+			}
+		}
+	}
+}
+
+echo "</p>\n\n";
+
+
 echo "<h2>Submissions</h2>\n\n<p>Checking submissions...<br />\n";
 
 // check for non-existent problem references
@@ -149,7 +170,7 @@ echo "<p>End of config checker.</p>\n\n";
 
 // helper to output an error message.
 function err ($string) {
-	echo "<b><u>ERROR</u>: ".$string."</b><br />\n";
+	echo "<b><u>ERROR</u>: ".htmlspecialchars($string)."</b><br />\n";
 }
 
 require('../footer.php');
